--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -20,25 +20,30 @@ let element = (tag, attrs, children) => {
 let element_p = children => element('p', {}, children);
 
 let updateOnlyChild = (parent, el1) => {
-	let children = parent.children;
+	let children = parent.childNodes;
 	if (children.length == 0)
 		parent.appendChild(el1);
-	else {
-		let el0 = children[0];
-		parent.replaceChild(el1, el0);
-	}
+	else
+		parent.replaceChild(el1, children[0]);
 };
 
-let pwm = new WeakMap();
+let rd_text = (vm0, vm1) => {
+	return element_p([document.createTextNode(vm1)]);
+};
 
 let rd = (vm0, vm1) => dom => {
-	if (vm0 != vm1) updateOnlyChild(dom, element_p([document.createTextNode(vm1.message)]));
+	if (vm0 == null)
+		dom.appendChild(rd_text(null, vm1.message));
+	else if (vm0 != vm1)
+		updateOnlyChild(dom, rd_text(vm0.message, vm1.message));
 };
 
-let body = document.getElementById('target');
-
 let pvm = null;
-let renderAgain = vm => { rd(pvm, vm)(body); pvm = vm; };
+
+let renderAgain = vm => {
+	rd(pvm, vm)(document.getElementById('target'));
+	pvm = vm;
+};
 
 renderAgain({ message: 'hello world0', });
 renderAgain({ message: 'hello world1', });
