--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -20,7 +20,7 @@ let element = (tag, attrs, children) => {
 let element_li = children => element('li', {}, children);
 let element_p = children => element('p', {}, children);
 
-let rd_text = (vm0, vm1) => (dom, domc) => {
+let rd_text = (vm0, vm1, dom, domc) => {
 	if (vm0 == null)
 		dom.appendChild(domc = element_p([document.createTextNode(vm1)]));
 	else if (vm1 == null)
@@ -29,7 +29,7 @@ let rd_text = (vm0, vm1) => (dom, domc) => {
 		domc.replaceChild(document.createTextNode(vm1), domc.childNodes[0]);
 };
 
-let rd_listItem = (vm0, vm1) => (dom, domc) => {
+let rd_listItem = (vm0, vm1, dom, domc) => {
 	if (vm0 == null)
 		dom.appendChild(domc = element_li([document.createTextNode(vm1)]));
 	else if (vm1 == null)
@@ -38,48 +38,48 @@ let rd_listItem = (vm0, vm1) => (dom, domc) => {
 		domc.replaceChild(document.createTextNode(vm1), domc.childNodes[0]);
 };
 
-let rd_fruits = (vm0, vm1) => (dom, domc) => {
+let rd_fruits = (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = document.createElement('ul'));
-		for (let i = 0; i < vm1.length; i++) domc.appendChild(rd_listItem(null, vm1[i])(domc, null));
+		for (let i = 0; i < vm1.length; i++) domc.appendChild(rd_listItem(null, vm1[i], domc, null));
 	} else if (vm1 == null)
 		dom.removeChild(domc);
 	else if (vm0 != vm1) {
 		let i = 0;
 		let children = domc.childNodes;
 		let imin = Math.min(vm0.length, vm1.length);
-		for (; i < imin; i++) rd_listItem(vm0[i], vm1[i])(domc, children[i]);
-		for (; i < vm1.length; i++) rd_listItem(null, vm1[i])(domc, null);
+		for (; i < imin; i++) rd_listItem(vm0[i], vm1[i], domc, children[i]);
+		for (; i < vm1.length; i++) rd_listItem(null, vm1[i], domc, null);
 		for (; i < children.length; i++) domc.removeChild(children[i]);
 	}
 };
 
-let rd_linearList = (vm0, vm1) => (dom, domc) => {
+let rd_linearList = (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = document.createElement('ul'));
-		for (let i = 0; i < vm1.length; i++) domc.appendChild(rd_listItem(null, vm1[i])(domc, null));
+		for (let i = 0; i < vm1.length; i++) domc.appendChild(rd_listItem(null, vm1[i], domc, null));
 	} else if (vm1 == null)
 		dom.removeChild(domc);
 	else if (vm0 != vm1) {
 		let i = 0;
 		let children = domc.childNodes;
 		let imin = Math.min(vm0.length, vm1.length);
-		for (; i < imin; i++) rd_listItem(vm0[i], vm1[i])(domc, children[i]);
-		for (; i < vm1.length; i++) rd_listItem(null, vm1[i])(domc, null);
+		for (; i < imin; i++) rd_listItem(vm0[i], vm1[i], domc, children[i]);
+		for (; i < vm1.length; i++) rd_listItem(null, vm1[i], domc, null);
 		for (; i < children.length; i++) domc.removeChild(children[i]);
 	}
 };
 
-let rd_vm = (vm0, vm1) => dom => {
+let rd_vm = (vm0, vm1, dom) => {
 	if (vm0 == null) {
-		rd_text(null, vm1.message)(dom, null);
-		rd_fruits(null, vm1.fruits)(dom, null);
+		rd_text(null, vm1.message, dom, null);
+		rd_fruits(null, vm1.fruits, dom, null);
 	} else if (vm1 == null)
 		dom.removeChild(domc);
 	else if (vm0 != vm1) {
 		let [dom0, dom1] = dom.childNodes;
-		rd_text(vm0.message, vm1.message)(dom, dom0);
-		rd_fruits(vm0.fruits, vm1.fruits)(dom, dom1);
+		rd_text(vm0.message, vm1.message, dom, dom0);
+		rd_fruits(vm0.fruits, vm1.fruits, dom, dom1);
 	}
 	return dom;
 };
@@ -87,7 +87,7 @@ let rd_vm = (vm0, vm1) => dom => {
 let pvm = null;
 
 let renderAgain = vm => {
-	rd_vm(pvm, vm)(document.getElementById('target'));
+	rd_vm(pvm, vm, document.getElementById('target'));
 	pvm = vm;
 };
 
