--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -88,7 +88,7 @@ let rd_vector = (vm0, vm1, dom, domc) => {
 let rd_elementText = rd_element(t => document.createTextNode(t));
 let rd_text = rd_elementText(element_p);
 let rd_listItem = rd_elementText(element_li);
-let rd_fruits = rd_dict(vm => vm, () => element('ul', {})([]), rd_listItem);
+let rd_fruits = rd_dict(vm => vm, () => document.createElement('ul'), rd_listItem);
 
 let rd_vm = (vm0, vm1, dom) => {
 	if (vm0 == null) {
