--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -17,9 +17,6 @@ let element = (tag, attrs) => children => {
 	return el;
 };
 
-let element_li = element('li', {});
-let element_p =  element('p', {});
-
 let rd_element = childrenf => elementf => (vm0, vm1, dom, domc) => {
 	if (vm0 == null)
 		dom.appendChild(domc = elementf(childrenf.map(childf => childf(vm1))));
@@ -87,8 +84,8 @@ let rd_vector = (vm0, vm1, dom, domc) => {
 };
 
 let rd_elementText = rd_element([t => document.createTextNode(t)]);
-let rd_text = rd_elementText(element_p);
-let rd_listItem = rd_elementText(element_li);
+let rd_listItem = rd_elementText(element('li', {}));
+let rd_text = rd_elementText(element('p', {}));
 let rd_fruits = rd_dict(vm => vm, () => document.createElement('ul'), rd_listItem);
 
 let rd_vm = (vm0, vm1, dom) => {
