--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -10,17 +10,30 @@
 	<script type='text/javascript'>
 'use strict';
 
-let element = (tag, attrs) => children => {
+let element = (tag, attrs, children) => {
 	let el = document.createElement(tag);
-	for (let [key, value] of Object.entries(attrs)) el.setAttribute(key, value);
-	for (let child of children) el.appendChild(child);
+	if (attrs != null)
+		for (let [key, value] of Object.entries(attrs))
+			el.setAttribute(key, value);
+	if (children != null)
+		for (let child of children)
+			el.appendChild(child);
 	return el;
 };
 
+let rd_c = elementf => (vm0, vm1, dom, domc) => {
+	if (vm0 != vm1) {
+		if (vm0 != null) dom.removeChild(domc);
+		if (vm1 != null) dom.appendChild(elementf(vm1), domc);
+	}
+};
+
 let rd_element = (elementf, childrenf) => (vm0, vm1, dom, domc) => {
-	if (vm0 == null)
-		dom.appendChild(domc = elementf(childrenf.map(childf => childf(vm1))));
-	else if (vm1 == null)
+	if (vm0 == null) {
+		dom.appendChild(domc = elementf());
+		for (let childf of childrenf)
+			domc.appendChild(childf(vm1), null);
+	} else if (vm1 == null)
 		dom.removeChild(domc);
 	else if (vm0 != vm1)
 		for (let i = 0; i < childrenf.length; i++)
@@ -83,8 +96,8 @@ let rd_vector = (vm0, vm1, dom, domc) => {
 	}
 };
 
-let rd_listItem = rd_element(element('li', {}), [t => document.createTextNode(t)]);
-let rd_text = rd_element(element('p', {}), [t => document.createTextNode(t)]);
+let rd_listItem = rd_element(() => element('li'), [t => document.createTextNode(t)]);
+let rd_text = rd_element(() => element('p'), [t => document.createTextNode(t)]);
 let rd_fruits = rd_dict(vm => vm, () => document.createElement('ul'), rd_listItem);
 
 let rd_vm = (vm0, vm1, dom) => {
