--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -10,7 +10,7 @@
 	<script type='text/javascript'>
 'use strict';
 
-let element = (tag, attrs, children) => {
+let newElement = (tag, attrs, children) => {
 	let el = document.createElement(tag);
 	if (attrs != null)
 		for (let [key, value] of Object.entries(attrs))
@@ -82,7 +82,7 @@ let rd_dict = (keyf, elementf, rdf) => (vm0, vm1, dom, domc) => {
 
 let rd_vector = (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
-		dom.appendChild(domc = document.createElement('ul'));
+		dom.appendChild(domc = newElement('ul'));
 		for (let i = 0; i < vm1.length; i++) rd_listItem(null, vm1[i], domc, null);
 	} else if (vm1 == null)
 		dom.removeChild(domc);
@@ -97,9 +97,9 @@ let rd_vector = (vm0, vm1, dom, domc) => {
 };
 
 let rd_textNode = rd_c(vm => document.createTextNode(vm));
-let rd_listItem = rd_element(() => element('li'), [rd_textNode]);
-let rd_text = rd_element(() => element('p'), [rd_textNode]);
-let rd_fruits = rd_dict(vm => vm, () => document.createElement('ul'), rd_listItem);
+let rd_listItem = rd_element(() => newElement('li'), [rd_textNode]);
+let rd_text = rd_element(() => newElement('p'), [rd_textNode]);
+let rd_fruits = rd_dict(vm => vm, () => newElement('ul'), rd_listItem);
 
 let rd_vm = (vm0, vm1, dom) => {
 	if (vm0 == null) {
