--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -28,6 +28,13 @@ let rd_c = elementf => (vm0, vm1, dom, domc) => {
 	}
 };
 
+let rd_prop = (key, rdf) => (vm0, vm1, dom, domc) => {
+	rdf(
+		vm0 != null ? vm0[key] : null,
+		vm1 != null ? vm1[key] : null,
+		dom, domc);
+};
+
 let rd_element = (elementf, childrenf) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = elementf());
@@ -40,7 +47,7 @@ let rd_element = (elementf, childrenf) => (vm0, vm1, dom, domc) => {
 			childrenf[i](vm0, vm1, domc, domc.childNodes[i]);
 };
 
-let rd_dict = (keyf, elementf, rdf) => (vm0, vm1, dom, domc) => {
+let rd_for = (keyf, elementf, rdf) => (vm0, vm1, dom, domc) => {
 	if (vm0 == null) {
 		dom.appendChild(domc = elementf());
 		for (let i = 0; i < vm1.length; i++) rdf(null, vm1[i], domc, null);
@@ -99,18 +106,18 @@ let rd_vector = (vm0, vm1, dom, domc) => {
 let rd_textNode = rd_c(vm => document.createTextNode(vm));
 let rd_listItem = rd_element(() => newElement('li'), [rd_textNode]);
 let rd_text = rd_element(() => newElement('p'), [rd_textNode]);
-let rd_fruits = rd_dict(vm => vm, () => newElement('ul'), rd_listItem);
+let rd_fruits = rd_for(vm => vm, () => newElement('ul'), rd_listItem);
 
 let rd_vm = (vm0, vm1, dom) => {
 	if (vm0 == null) {
-		rd_text(null, vm1.message, dom, null);
-		rd_fruits(null, vm1.fruits, dom, null);
+		rd_prop('message', rd_text)(null, vm1, dom, null);
+		rd_prop('fruits', rd_fruits)(null, vm1, dom, null);
 	} else if (vm1 == null)
 		dom.removeChild(domc);
 	else if (vm0 != vm1) {
 		let [dom0, dom1] = dom.childNodes;
-		rd_text(vm0.message, vm1.message, dom, dom0);
-		rd_fruits(vm0.fruits, vm1.fruits, dom, dom1);
+		rd_prop('message', rd_text)(vm0, vm1, dom, dom0);
+		rd_prop('fruits', rd_fruits)(vm0, vm1, dom, dom1);
 	}
 	return dom;
 };
